@@ -254,6 +254,8 @@
    </variablelist>
   </refsect1>
 
+  &submani18n;
+
   <refsect1>
    <title>See Also</title>
    <para>
@@ -1654,6 +1656,8 @@
     </varlistentry>
    </variablelist>
   </refsect1>
+
+  &submani18n;
 
   <refsect1>
    <title>See Also</title>
